nav bar wrap fix

--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ input[type="text"] {
 }
 #nav .header {
   text-align: center;
+ 
 }
 #nav .header2 a, #nav .header3 a{
   display: block;
@@ -649,7 +650,7 @@ h4 {
 }
 .underline h2::after {
   content: "";
-  width: 4rem;
+  width: 6rem;
   height: 3px;
   display: block;
   position: absolute;
@@ -657,7 +658,7 @@ h4 {
 }
 .line h2::after {
   content: "";
-  width: 3.2rem;
+  width: 4rem;
   height: 3px;
   display: block;
   position: absolute;
@@ -759,6 +760,33 @@ h4 {
   display: flex;
   flex-direction: row;
   flex-wrap:wrap;
+}
+.flex2 {
+  display: flex;
+  margin-left: 20%;
+  justify-content: space-evenly;
+  align-items: center;
+  background-size: 140%;
+  background-image: url('Assets/weather.jpg'); 
+  background-size: cover; /* This will make the image cover the entire container */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; 
+  width: 50%;
+
+}
+.weather-card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+ 
+  max-width: 300px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  background-color: #fff;
+}
+.weather-data {
+  font-size: 13px;
+  margin: 10px 0;
 }
 #mobile {
   margin-right: 20px;
@@ -948,10 +976,11 @@ input[type=text], select, textarea {
 }
 .testi {
   display: flex;
-  justify-content:space-evenly;
-  align-items: center;
+  
+ 
   margin-left: 20%;
-  margin-right: 5%;;
+  margin-right: 5%;
+  margin-bottom:20px;
 }
 figure.snip1157 {
   font-family: 'Raleway', Arial, sans-serif;
@@ -1123,7 +1152,6 @@ figure.snip1157 .arrow {
 }
 #nav {
   padding: 2rem;
-  flex-wrap: wrap;
 }
 .wrapper {
  flex-wrap:wrap;
